force-app/main/default/objects/News__c/fields/Description_RU__c.field-meta.xml
<CustomField>
    <fullName>Description_RU__c</fullName>
    <inlineHelpText>Shown for main news only</inlineHelpText>
    <label>Description RU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>