force-app/main/default/objects/News__c/fields/Description_UA__c.field-meta.xml
<CustomField>
    <fullName>Description_UA__c</fullName>
    <inlineHelpText>Shown for main news only</inlineHelpText>
    <label>Description UA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>