force-app/main/default/objects/News__c/fields/Header_EN__c.field-meta.xml
<CustomField>
    <fullName>Header_EN__c</fullName>
    <label>Header EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>