force-app/main/default/objects/News__c/fields/Header_RU__c.field-meta.xml
<CustomField>
    <fullName>Header_RU__c</fullName>
    <label>Header RU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>