force-app/main/default/objects/News__c/fields/Header_UA__c.field-meta.xml
<CustomField>
    <fullName>Header_UA__c</fullName>
    <label>Header UA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>