force-app/main/default/objects/News__c/fields/Link_EN__c.field-meta.xml
<CustomField>
    <fullName>Link_EN__c</fullName>
    <label>Link EN</label>
    <type>Url</type>
</CustomField>