force-app/main/default/objects/News__c/fields/Link_RU__c.field-meta.xml
<CustomField>
    <fullName>Link_RU__c</fullName>
    <label>Link RU</label>
    <type>Url</type>
</CustomField>