force-app/main/default/objects/News__c/fields/Link_UA__c.field-meta.xml
<CustomField>
    <fullName>Link_UA__c</fullName>
    <label>Link UA</label>
    <type>Url</type>
</CustomField>