force-app/main/default/objects/News__c/fields/Main_News__c.field-meta.xml
<CustomField>
    <fullName>Main_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main News</label>
    <type>Checkbox</type>
</CustomField>