force-app/main/default/objects/News__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Header_EN__c</columns>
    <columns>Date__c</columns>
    <columns>Main_News__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>